# referral-router

./: .gitignore  DEMO_PLAN.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.yml  pyproject.toml  router.py  tools.yml
.github/workflows/: ci.yml
agent_app/: Dockerfile  __init__.py  graph.py  main.py  requirements.txt  tools.py
data/: sample_referral.txt
empi_mock/: Dockerfile  main.py  requirements.txt
pdf_service/: Dockerfile  main.py  requirements.txt
scripts/: load_synthea.sh
tests/: test_tools.py
tests/e2e/: test_workflow.py
